--- a/css/estilos.css
+++ b/css/estilos.css
@@ -5,7 +5,7 @@
 }
 
 body{
-    mask-border-outset: 'Open-Sans', sans-serif;
+    font-family: 'Open-Sans', sans-serif;
 }
     
  .contenedor{
@@ -13,4 +13,14 @@ body{
     max-width: 1200px;
     overflow: hidden;
     margin: auto;
+    padding: 60px;
+ }
+
+ header{
+    height: 100vh;
+    background-image: linear-gradient(to top, rgba(161, 140, 209, 0.5) 0%, rgba(251, 194, 235, 0.5) 100%), url(../img/darren-nunis-cxE7SXKnzv0-unsplash.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: center;
  }
