--- a/css/estilos.css
+++ b/css/estilos.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+:root{
+    scroll-behavior: smooth;
+}
+
 body{
     font-family: 'Open-Sans', sans-serif;
 }
@@ -24,3 +28,110 @@ body{
     background-attachment: fixed;
     background-position: center;
  }
+
+head{
+    padding: 0;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    color: #fff;
+ }
+
+ .hamburguer{
+    position: fixed;
+    top: 30px;
+    right: 30px;
+    background: #fff;
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+    border-radius: 10px;
+    box-shadow: 0 0 6px rgba(0, 0, 0.5)
+ }
+
+ .menu-navegacion {
+position: fixed;
+top: 0;
+right: 0;
+width: 30vw;
+height: 100%;
+background-image: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+display: flex;
+flex-direction: column;
+justify-content: space-evenly;
+align-items: center;
+transition: transform .3s ease-in-out;
+transform: translate(110%);
+box-shadow: 0 0 6px rgba(0, 0, 0.5);
+ }
+
+.spread{
+    transform: translate(0);
+}
+
+.menu-navegacion a{
+color:#fff;
+text-decoration: none;
+}
+
+.titulo{
+    font-size: 60px;
+    margin-bottom: 15px;    
+}
+
+.copy{
+    font-weight: 300;
+    font-size: 25px;    
+}
+
+ 
+/* Nuestro servicio*/
+
+.subtitulo{
+  text-align: center;
+  font-weight: 300;
+  color: #9f8ad0;
+  margin-bottom: 40px;
+  font-size: 40px;
+}
+
+.contenedor-servicio{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.contenedor-servicio img{
+    width: 40%;
+}
+
+.checklist-servicio{
+    width: 40%;
+}
+
+.service{
+    margin-bottom: 20px;
+}
+
+.n-service{
+    margin-bottom: 7px;
+    color: #9f8ad0; 
+}
+
+.number{
+    display: inline-block;
+    background-image: linear-gradient(to top, #a18cd1 0%, #fbc2eb 100%);
+    width: 30px;
+    height: 30px;
+    color: #fff;
+    text-align: center;
+    border-radius: 50%;
+    font-weight: 700;
+    line-height: 30px;
+    margin-right: 5px;
+    }
+
+
