--- a/css/estilos.css
+++ b/css/estilos.css
@@ -4,12 +4,12 @@
     box-sizing: border-box;
 }
 
-:root{
+.root{
     scroll-behavior: smooth;
 }
 
 body{
-    font-family: 'Open-Sans', sans-serif;
+    font-family: 'Annie Use Your Telescope''BioRhyme', serif;
 }
     
  .contenedor{
@@ -115,6 +115,7 @@ text-decoration: none;
 
 .service{
     margin-bottom: 20px;
+    text-align: center;
 }
 
 .n-service{
